--- a/Devslopes-Social/Base.lproj/Main.storyboard
+++ b/Devslopes-Social/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,11 +18,108 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TLE-iu-jBv">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="OVz-DA-j4f"/>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="MZG-EG-bGY"/>
+                                    <constraint firstItem="OVz-DA-j4f" firstAttribute="centerY" secondItem="TLE-iu-jBv" secondAttribute="centerY" id="gfw-ct-cOR"/>
+                                    <constraint firstItem="OVz-DA-j4f" firstAttribute="centerX" secondItem="TLE-iu-jBv" secondAttribute="centerX" id="jKf-oR-ojx"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hHA-2V-T3v">
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An account will be automatically created for you, if you don't already have one." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuF-Ps-SbE">
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549020000002" blue="0.56078431370000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="iuF-Ps-SbE" firstAttribute="leading" secondItem="hHA-2V-T3v" secondAttribute="leading" constant="16" id="61F-hd-ljE"/>
+                                    <constraint firstAttribute="trailing" secondItem="iuF-Ps-SbE" secondAttribute="trailing" constant="16" id="8Xi-hP-y3j"/>
+                                    <constraint firstAttribute="bottom" secondItem="iuF-Ps-SbE" secondAttribute="bottom" constant="8" id="KXL-Rn-R31"/>
+                                    <constraint firstAttribute="height" constant="75" id="ZNo-b3-qxv"/>
+                                    <constraint firstItem="iuF-Ps-SbE" firstAttribute="top" secondItem="hHA-2V-T3v" secondAttribute="top" constant="8" id="mOT-nF-0q6"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aKo-QX-PgN">
+                                <color key="backgroundColor" red="0.0" green="0.59215686270000001" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Fcy-8v-ycp"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khj-EP-gae">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="a0E-fz-7s5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6BI-Wz-4h4">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="6bZ-Mr-Rwa"/>
+                                    <constraint firstAttribute="height" constant="150" id="si3-cZ-eag"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="FB-Logo"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="qfU-Zn-SGg">
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rXn-7C-Hh0">
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CvY-SF-qGu">
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wGj-Bt-VXX">
+                                        <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <state key="normal" title="Sign in">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aKo-QX-PgN" secondAttribute="trailing" id="8cH-5g-JbT"/>
+                            <constraint firstItem="khj-EP-gae" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="C5k-hP-vR6"/>
+                            <constraint firstItem="qfU-Zn-SGg" firstAttribute="top" secondItem="6BI-Wz-4h4" secondAttribute="bottom" constant="40" id="L1i-9Y-fZf"/>
+                            <constraint firstItem="qfU-Zn-SGg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="L9B-Sc-wrO"/>
+                            <constraint firstItem="qfU-Zn-SGg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="NdD-tL-GXm"/>
+                            <constraint firstItem="khj-EP-gae" firstAttribute="top" secondItem="TLE-iu-jBv" secondAttribute="bottom" constant="8" id="QUs-r6-koV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hHA-2V-T3v" secondAttribute="bottom" id="RTh-HK-aX7"/>
+                            <constraint firstItem="hHA-2V-T3v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Tl8-4J-e6K"/>
+                            <constraint firstAttribute="trailing" secondItem="hHA-2V-T3v" secondAttribute="trailing" id="ZJi-q3-8b9"/>
+                            <constraint firstItem="TLE-iu-jBv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aeL-tY-ZwQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qfU-Zn-SGg" secondAttribute="trailing" constant="30" id="asl-vy-Mh9"/>
+                            <constraint firstAttribute="trailing" secondItem="TLE-iu-jBv" secondAttribute="trailing" id="auj-hz-Qtr"/>
+                            <constraint firstItem="aKo-QX-PgN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bwk-Zb-EuX"/>
+                            <constraint firstItem="khj-EP-gae" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dV7-Rk-I3h"/>
+                            <constraint firstItem="TLE-iu-jBv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jcy-j4-8S1"/>
+                            <constraint firstItem="6BI-Wz-4h4" firstAttribute="top" secondItem="khj-EP-gae" secondAttribute="bottom" constant="40" id="kpk-Qg-jS7"/>
+                            <constraint firstItem="6BI-Wz-4h4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mh9-ct-xfL"/>
+                            <constraint firstItem="aKo-QX-PgN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xKZ-m5-BK0"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="107.49625187406298"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="FB-Logo" width="72" height="72"/>
+        <image name="devslopes-logo" width="150" height="94"/>
+    </resources>
 </document>
